<resources>
    <string name="app_name">PizzaHut</string>
    <string name="welcome">Welcome to Pizza Hut!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Create your profile</string>
    <string name="signup_text">Sign Up</string>
    <string name="signup_text2">Create Your Pizza Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone Number</string>
    <string name="cancel">Cancel</string>
    <string name="serving_options">1. Serving Options </string>
    <string name="select_crust">Select Crust</string>
    <string name="select_pizza_size">Select Size</string>
    <string name="select_quantity">Select Quantity</string>
    <string name="sauce_title">2. Sauce</string>
    <string name="select_sauce">Select Sauce</string>
    <string name="cheese_title">3. Cheese</string>
    <string name="select_cheese">Select Cheese</string>
    <string name="select_none">None</string>
    <string name="select_light">Light</string>
    <string name="select_normal">Normal</string>
    <string name="select_extra">Extra</string>
    <string name="toppings_title">4. Toppings</string>
    <string name="select_ham">Ham</string>
    <string name="select_beef">Beef</string>
    <string name="select_salami">Salami</string>
    <string name="select_pepperoni">Pepperoni</string>
    <string name="select_italian_sausage">Italian Sausage</string>
    <string name="select_premium_chicken">Premium Chicken</string>
    <string name="select_bacon">Bacon</string>
    <string name="select_philly_steak">Philly Steak</string>
    <string name="select_hot_buffalo_sauce">Hot Buffalo Sauce</string>
    <string name="select_jalapeno_peppers">Jalapeno Peppers</string>
    <string name="select_onions">Onions</string>
    <string name="select_banana_peppers">Banana Peppers</string>
    <string name="select_dice_tomatoes">Diced Tomatoes</string>
    <string name="select_black_olives">Black Olives</string>
    <string name="select_mushrooms">Mushrooms</string>
    <string name="select_pineapple">Pineapple</string>
    <string name="select_shredded_provolone_cheese">Shredded Provolone Cheese</string>
    <string name="select_cheddar_cheese_blend">Cheddar Cheese Blend</string>
    <string name="select_green_peppers">Green Peppers</string>
    <string name="select_spinach">Spinach</string>
    <string name="select_feta_cheese">Feta Cheese</string>
    <string name="select_shredded_parmesan_asiago">Shredded Parmesan Asiagno</string>
    <string name="cancel_label">Cancel</string>
    <string name="extra_sauce_title">5. Add Sauce For Dipping</string>
    <string name="garlic_dipping_cup">Garlic Dipping Cup</string>
    <string name="ranch_dipping_cup">Ranch Dipping Cup</string>
    <string name="marinara_dipping_cup">Marinara Sauce Dipping Cup</string>
    <string name="special_instructions">6. Special Instructions</string>
    <string name="cut_type">Cut</string>
    <string name="bake_type">Bake</string>
    <string name="seasoning_type">Seasoning</string>
    <string name="button_add_to_order">Add to order</string>
    <string name="products">Products</string>
    <string name="food_and_beverages">Food and Beverages:</string>
    <string name="taxes">10% Tax: </string>
    <string name="final_total">Total: </string>
    <string name="button_checkout">Checkout</string>
    <string name="button_place_order">Place Order</string>
    <string name="thank_you_title">THANK YOU FOR YOUR ORDER</string>
    <string name="order_description">Please visit the Pizza Hut Store and show them this screen or tell them the order number to receive your order. Your order details are below.</string>
    <string name="order_history">Please visit the Pizza Hut Store and show them this screen
        or tell them the order number to receive your order.</string>

    <string name="line">__________________________________</string>
    <string name="order_title">Order History</string>
    <string-array name="toppings_quantity">
        <item>None</item>
        <item>Light</item>
        <item>Normal</item>
        <item>Extra</item>
    </string-array>

    <string-array name="sauces">
        <item>None</item>
        <item>Tomato Sauce</item>
        <item>Marinara Sauce</item>
        <item>Honey BBQ Sauce</item>
        <item>Parmesan Sauce</item>
        <item>Alfredo Sauce</item>
        <item>Ranch</item>
    </string-array>

    <string-array name="cut_type_list">
        <item>Pie Cut</item>
        <item>Square Cut</item>
        <item>Uncut</item>
    </string-array>

    <string-array name="bake_type_list">
        <item>Normal Bake</item>
        <item>Well Done</item>
    </string-array>

    <string-array name="seasoning_type_list">
        <item>Garlic-Seasoned Crust</item>
        <item>No Garlic-Seasoned Crust</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>